unpackaged/main/default/objects/Theme_Team__c/Theme_Team__c.object-meta.xml
<CustomObject>
    <label>Theme Team</label>
    <nameField>
        <displayFormat>TT-{000000}</displayFormat>
        <label>Theme Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>