unpackaged/main/default/objects/Theme_Team__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Theme_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>