unpackaged/main/default/objects/Theme_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>