unpackaged/main/default/objects/Theme_Team__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme</label>
    <referenceTo>Theme__c</referenceTo>
    <relationshipLabel>Theme Teams</relationshipLabel>
    <relationshipName>Theme_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>